--- a/maptify.html
+++ b/maptify.html
@@ -12,8 +12,23 @@
         /* The width is the width of the web page */
       }
     </style>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="geolocation.js"></script>
+    <script>
+      // Initialize and add the map
+      function initMap() {
+        // The location of Uluru
+        const uluru = { lat: 35.91005970806239, lng: -79.04749962699269 };
+        // The map, centered at Uluru
+        const map = new google.maps.Map(document.getElementById("map"), {
+          zoom: 15,
+          center: uluru,
+        });
+        // The marker, positioned at Uluru
+        const marker = new google.maps.Marker({
+          position: uluru,
+          map: map,
+        });
+      }
+    </script>
   </head>
   <body>
     <h3>My Google Maps Demo</h3>
@@ -22,7 +37,7 @@
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-QsZyOuKcR6QcjBBHWU5_1RtdY6ojpPw&callback=initMap&libraries=&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_ilchiLmgjttgg2xStKFgNZBe5mgldK0&callback=initMap&libraries=&v=weekly"
       async
     ></script>
   </body>
