--- a/maptify.html
+++ b/maptify.html
@@ -1,4 +1,5 @@
-<!-- <!DOCTYPE html>
+<html></html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>google maps api pls work i'm fighting for my life</title>
@@ -7,7 +8,7 @@
       /* Set the size of the div element that contains the map */
       #map {
         height: 100%;
-        /* This doesn't work por que ? */
+        /* The height is 400 pixels */
         width: 100%;
         /* The width is the width of the web page */
       }
@@ -31,50 +32,6 @@
     </script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="geolocation.js"></script>
-  </head>
-  <body>
-    <h3>My Google Maps Demo</h3>
-    <!--The div element for the map -->
-    <div id="map"></div>
-
-    <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_ilchiLmgjttgg2xStKFgNZBe5mgldK0&callback=initMap&libraries=&v=weekly"
-      async
-    ></script>
-  </body>
-</html> -->
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>google maps api pls work i'm fighting for my life</title>
-
-    <style type="text/css">
-      /* Set the size of the div element that contains the map */
-      #map {
-        height: 100%;
-        /* The height is 400 pixels */
-        width: 100%;
-        /* The width is the width of the web page */
-      }
-    </style>
-    <script>
-      // Initialize and add the map
-      function initMap() {
-        // The location of Uluru
-        const uluru = { lat: 35.91005970806239, lng: -79.04749962699269 };
-        // The map, centered at Uluru
-        const map = new google.maps.Map(document.getElementById("map"), {
-          zoom: 15,
-          center: uluru,
-        });
-        // The marker, positioned at Uluru
-        const marker = new google.maps.Marker({
-          position: uluru,
-          map: map,
-        });
-      }
-    </script>
   </head>
   <body>
     <h3>My Google Maps Demo</h3>
